codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_queued_mail_after_commentary.snap
---
source: core/tests/suite/pending_input.rs
expression: snapshot
---
Scenario: /responses POST bodies with pending input

## Window 1
-- request 1 (request; First request) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/developer:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    first prompt
-- request 2 (request; Second request) --
03:message/assistant:
    first answer
04:agent_message
