codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_user_input_no_preempt_after_reasoning.snap
---
source: core/tests/suite/pending_input.rs
expression: snapshot
---
Scenario: /responses POST bodies (input only, redacted like other suite snapshots)

## First request
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
01:message/user:first prompt

## Second request
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
01:message/user:first prompt
02:reasoning:summary=thinking:encrypted=true
03:function_call/shell
04:message/assistant:first answer
05:function_call_output:unsupported call: shell
06:message/user:second prompt
